--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "oracle_engine"
+name = "@SirBerg/oracle_engine"
 edition = "2021"
 version = "7.3.6-pve"
 rust-version = "1.65"
-repository = "https://github.com/d2foundry/oracle_engine/"
+repository = "https://github.com/SirBerg/oracle_engine/"
 build = "build.rs"
 
 [build-dependencies]
