--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,12 +17,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
-      - run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
-      - run: cargo build
-      - run: wasm-pack build --release --target nodejs
 
-  publish-gpr:
+
+  publish-and-build-gpr:
     needs: build
     runs-on: ubuntu-latest
     permissions:
@@ -34,8 +31,15 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
+      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+      - run: cargo build
+      - run: wasm-pack build --release --target nodejs
       - run: cd pkg
       - run: echo $(cat package.json | jq -c '.name="@SirBerg/oracle_engine"') > package.json
+      - run: echo //@SirBerg:registry=https://npm.pkg.github.com/:_authToken=${{secrets.TOKEN}} >> .npmrc
+      - run: echo registry=https://npm.pkg.github.com/ >> .npmrc
+      - run: echo always-auth=true >> .npmrc
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
