--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -25,7 +25,7 @@ jobs:
       - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
       - run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
       - run: cargo build
-      - run: wasm-pack build --release --target web
+      - run: wasm-pack build --release --target bundler
       - run: ls -la
       - name: Publish
         env:
